--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
 
 <div class="container">
-    <img src="logo.png" alt="EDME" class="logo">
+    <img src="logo.png" alt="EDME" class="logo" width="150" height="50">
 
     <h2>Регистрация участника</h2>
     <p class="subtitle">Введите ваши данные для продолжения</p>
 
-    <form id="refForm">
+    <form id="refForm" action="/submit" method="POST">
         <label for="fio">ФИО</label>
-        <input type="text" id="fio" name="fio" required>
+        <input type="text" id="fio" name="fio" required pattern="[А-Яа-яЁё\s]{3,}" title="Введите ФИО кириллицей (минимум 3 символа)">
 
         <label for="username">Username (Instagram/Telegram)</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required pattern="[A-Za-z0-9_]{3,}" title="Латинские буквы, цифры или нижнее подчеркивание (минимум 3 символа)">
 
         <label for="subject">Предмет репетиторства</label>
         <select id="subject" name="subject" required>
@@ -39,6 +39,9 @@
             <option value="Младшая школа">Младшая школа</option>
         </select>
 
+        <!-- Пример CSRF-токена (если нужно) -->
+        <!-- <input type="hidden" name="csrf_token" value="токен"> -->
+
         <button type="submit" class="btn">Продолжить</button>
     </form>
 </div>
@@ -46,4 +49,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
